mdapipkg/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Third_Party_Firm__c</fullName>
        <label>Third Party Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Job_Title__c</fullName>
        <label>Third Party Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Name__c</fullName>
        <label>Third Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Phone__c</fullName>
        <label>Third Party Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Third_Party_Postal_Code__c</fullName>
        <label>Third Party Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_State__c</fullName>
        <label>Third Party State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Validation_Email_Sent__c</fullName>
        <label>Third Party Validation Email Sent (Histo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Party_Validation_Method__c</fullName>
        <label>Third Party Validation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Verification__c</fullName>
        <formula>IF(ISPICKVAL( Certification_Status__c ,&quot;Requested&quot;),   
HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; + $Api.Session_ID + &quot;&amp;ServerUrl=&quot;+ $Api.Partner_Server_URL_240 + &quot;&amp;Id=&quot; + Id + &quot;&amp;TemplateId=a2F2C0000008Rd2&quot;+&quot;&amp;ReportID=[Contact]00O2C000000VDrN?pv0=&quot; + LEFT(Contact_ID__c, 15) + &quot;&amp;OFN=Third+Party+Verification+-+&quot;+ KGRenewal__Contact__c +&quot;&amp;DocuSignVisible=1&quot;+&quot;&amp;DocuSignEmailSubject=Please DocuSign this document: Third Party Verification&quot; + &quot;&amp;DocuSignEmailBody=Please review the Third Party Verification request for &quot; + KGRenewal__Contact__r.FirstName + &quot; &quot; +  KGRenewal__Contact__r.LastName  + &quot; and either approve or reject.&quot; +&quot;&amp;DocuSignR1Name=&quot; +  Third_Party_Name__c  + &quot;&amp;DocuSignR1Email=&quot; +  Third_Party_Email__c  + &quot;&amp;DocuSignR1Role=Signer 1&quot;+&quot;&amp;DocuSignR2ID=&quot;+ KGRenewal__Contact__r.Id + &quot;&amp;DocuSignR2Type=Carbon Copy&quot;+&quot;&amp;DocuSignExpireVoidEnv=0&quot; +&quot;&amp;DocuSignRemindIn=7&quot;+&quot;&amp;DocuSignSendAsUserID=00561000002De9d&quot; + &quot;&amp;defaultpdf=0&quot; + &quot;&amp;DocuSignTag=1&quot;+ &quot;&amp;QMode=DocuSign&quot;+&quot;&amp;DS7=17&quot;, &quot;Resend 3rd Party Verification&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third Party Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>If( 
TEXT( KGRenewal__Contact__r.Tier_Number__c) &lt;&gt;&apos;&apos;, 
TEXT(KGRenewal__Contact__r.Tier_Number__c), 
IF( 
Floor( 
(Fiscal_Date_Start__c - KGRenewal__Contact__r.Join_Date__c)/365 
) &lt;12, &apos;1&apos;, 
If( 
AND( 
Floor((Fiscal_Date_Start__c - KGRenewal__Contact__r.Join_Date__c)/365) &gt;12, 
KGRenewal__Contact__r.Age_Next_Fiscal_Year__c &lt; 65 
), &apos;2&apos;, 
IF( 
AND(KGRenewal__Contact__r.Age_Next_Fiscal_Year__c &gt; 65, KGRenewal__Contact__r.Age_Next_Fiscal_Year__c &lt; 75), &apos;3&apos;, 
IF(KGRenewal__Contact__r.Age_Next_Fiscal_Year__c &gt; 75, 
&apos;4&apos;,&apos;&apos; 
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Formula__c</fullName>
        <formula>IF( 
ISPICKVAL(Title__c, &quot;Other&quot;), Title_Other__c , TEXT(Title__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Other__c</fullName>
        <inlineHelpText>If &apos;Other&apos; is selected in Title then fill this out.</inlineHelpText>
        <label>Title Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chairman of the Board</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Managing Director</fullName>
                </value>
                <value>
                    <fullName>Managing Partner</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Employee_Compensation__c</fullName>
        <label>Total Employee Compensation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_Via_Renewal_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked as true if the member chooses to transition DURING the YPO renewals process.</description>
        <label>Transitioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_3rd_Party_Verifier__c</fullName>
        <label>Type of 3rd Party Verifier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Chartered Accountant</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Qualifying_Company_Status__c</fullName>
        <label>Updated Qualifying Company Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated Status</fullName>
                </value>
                <value>
                    <fullName>Updated Qualification Company</fullName>
                </value>
                <value>
                    <fullName>Updated Company and Status</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Qualifying_Criteria__c</fullName>
        <label>Updated Qualifying Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated Title</fullName>
                </value>
                <value>
                    <fullName>Updated Qualification Company</fullName>
                </value>
                <value>
                    <fullName>Updated Qualifying Company and Title</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_ID_Historical__c</fullName>
        <label>VAT_ID (Historical)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <description>Field to capture VAT # to display on invoices</description>
        <label>VAT</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Call Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Owner_Email__c</fullName>
        <formula>Welcome_Call_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Welcome Call Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Welcome Call Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Which_Chapter__c</fullName>
        <label>Which Chapter?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worldaware_YPO_Gold_Count__c</fullName>
        <description>Count of complementary Worldaware YPO Gold member benefit line items</description>
        <inlineHelpText>Count of complementary Worldaware YPO Gold member benefit line items</inlineHelpText>
        <label>Worldaware YPO Gold Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Worldaware_YPO_Gold__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Certification_Option_Chosen__c</fullName>
        <label>3rd Party Certification Option Chosen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email Criteria To a Verifier</fullName>
                </value>
                <value>
                    <fullName>Link To Documentation</fullName>
                </value>
                <value>
                    <fullName>Upload Documents</fullName>
                </value>
                <value>
                    <fullName>Print Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YNG_Plus_Total__c</fullName>
        <description>Total for YNG+ member benefit line items</description>
        <inlineHelpText>Total for YNG+ member benefit line items</inlineHelpText>
        <label>YNG Plus Total</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.YNG_Plus__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Certification_Third_Party_Recieved_Today</fullName>
        <booleanFilter>(1 AND 2) or (3 and 4)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>KGRenewal__Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Certification_Type__c</columns>
        <columns>Certification_Status__c</columns>
        <columns>Date_Third_Party_Validated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certification_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <filters>
            <field>Date_Third_Party_Validated__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Third_Party_Approval__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Certification_Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Certification/Third Party Recieved Today</label>
        <sharedTo>
            <group>Mbr_Services_Mbr_Development</group>
            <group>Member_Services_Temp_Help</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chapter_Acceptance_Status_Reject</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Chapter_Acceptance_Status_1__c</columns>
        <columns>Transition_Via_Renewal_Form__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Chapter_Acceptance_Status_1__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Chapter Acceptance Status = Rejected</label>
        <sharedTo>
            <group>Mbr_Services_Mbr_Development</group>
            <group>Member_Services_Temp_Help</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Member_Company_Title</fullName>
        <booleanFilter>(2 OR 5) AND 3 AND( 1 OR 4) and 6 and 7 and 8</booleanFilter>
        <columns>KGRenewal__Contact__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Fiscal_Date_Start__c</columns>
        <columns>Updated_Qualifying_Criteria__c</columns>
        <columns>Updated_Qualifying_Company_Status__c</columns>
        <columns>Title__c</columns>
        <columns>Title_Other__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Updated_Qualifying_Criteria__c</field>
            <operation>equals</operation>
            <value>Updated Title,Updated Qualification Company</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Member</value>
        </filters>
        <filters>
            <field>Updated_Qualifying_Company_Status__c</field>
            <operation>notEqual</operation>
            <value>Pending,Validated</value>
        </filters>
        <filters>
            <field>Title__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <filters>
            <field>Updated_Qualifying_Criteria__c</field>
            <operation>equals</operation>
            <value>Updated Qualifying Company and Title</value>
        </filters>
        <filters>
            <field>Fiscal_Date_Start__c</field>
            <operation>equals</operation>
            <value>7/1/2018</value>
        </filters>
        <filters>
            <field>Certification_Page_Status_Exchange__c</field>
            <operation>equals</operation>
            <value>In Progress,Complete</value>
        </filters>
        <filters>
            <field>Certification_Type__c</field>
            <operation>notContain</operation>
            <value>No Certification Needed</value>
        </filters>
        <label>Renewals - Company or Title Changed</label>
        <sharedTo>
            <group>Mbr_Services_Mbr_Development</group>
            <group>Member_Services_Temp_Help</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>KGRenewal__Contact__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>ProspectNew</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Fiscal_Date_Start__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Certification_Type__c</columns>
        <columns>Certification_Status__c</columns>
        <columns>Grace_Status__c</columns>
        <columns>KGRenewal__BilledAmount__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Date_Local_Chapter_Dues_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Prospect</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Prospects Ready to Pay - New</label>
    </listViews>
    <listViews>
        <fullName>Qualifying_Company_Duplicates_Previous</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Date_Start__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2016</value>
        </filters>
        <filters>
            <field>Qualifying_Company__c</field>
            <operation>equals</operation>
            <value>Kristin LLC.</value>
        </filters>
        <label>Qualifying Company Dupes - Previous FY</label>
    </listViews>
    <listViews>
        <fullName>RenewalsOpportunities2</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 5 AND 4 and 6</booleanFilter>
        <columns>KGRenewal__Contact__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Fiscal_Date_Start__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Qualifying_Company__c</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Certification_Type__c</columns>
        <columns>Certification_Status__c</columns>
        <columns>Grace_Status__c</columns>
        <columns>KGRenewal__BilledAmount__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Date_Local_Chapter_Dues_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Date_Start__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <filters>
            <field>Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <filters>
            <field>Grace_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Certification_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <label>Renewals - Grace approved not complete</label>
    </listViews>
    <listViews>
        <fullName>RenewalsOpportunitiesdone</fullName>
        <columns>KGRenewal__Contact__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Fiscal_Date_Start__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Certification_Type__c</columns>
        <columns>Certification_Status__c</columns>
        <columns>Grace_Status__c</columns>
        <columns>KGRenewal__BilledAmount__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Date_Local_Chapter_Dues_Paid__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Date_Start__c</field>
            <operation>equals</operation>
            <value>7/1/2018</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Member</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>In Progress,Payment Pending,Payment Received,Closed Won</value>
        </filters>
        <label>Renewals - Members through the screens</label>
    </listViews>
    <listViews>
        <fullName>Renewals_3rd_Party_Verification_Pending</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>KGRenewal__Contact__c</columns>
        <columns>Qualifying_Company__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Certification_Type__c</columns>
        <columns>Date_Third_Party_Validated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certification_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <filters>
            <field>Date_Third_Party_Validated__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Cert_Status_Historic__c</field>
            <operation>notEqual</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Member</value>
        </filters>
        <label>Renewals -3rd Party Verification Pending</label>
        <sharedTo>
            <group>Mbr_Services_Mbr_Development</group>
            <group>Member_Services_Temp_Help</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Renewals_Grace_Pending_Chapter_Approval</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 5 AND 4 and 6</booleanFilter>
        <columns>KGRenewal__Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Chapter_Membership_Officer__c</columns>
        <columns>Grace_Status__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Fiscal_Date_Start__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Certification_Type__c</columns>
        <columns>Certification_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Date_Start__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <filters>
            <field>Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <filters>
            <field>Grace_Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <filters>
            <field>Certification_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <label>Renewals -Grace Pending Chapter Approval</label>
    </listViews>
    <listViews>
        <fullName>Renewalsthirddone2</fullName>
        <columns>KGRenewal__Contact__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Fiscal_Date_Start__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Certification_Type__c</columns>
        <columns>Certification_Status__c</columns>
        <columns>Cert_Status_Historic__c</columns>
        <columns>X3rd_Party_Certification_Option_Chosen__c</columns>
        <columns>Third_Party_Email__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Certification_Page_Status_Exchange__c</columns>
        <columns>KGRenewal__BilledAmount__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Date_Start__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <filters>
            <field>Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>In Progress,Payment Pending,Payment Received,Closed Won</value>
        </filters>
        <filters>
            <field>Certification_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <label>Renewals - Third Party needs validated</label>
    </listViews>
    <listViews>
        <fullName>Third_Party_Verification_Past_7_Days</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>KGRenewal__Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Third_Party_Validation_Email_Sent__c</columns>
        <columns>Certification_Type__c</columns>
        <columns>Certification_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>test</value>
        </filters>
        <label>Third Party Verification - Past 7 Days</label>
        <sharedTo>
            <group>Mbr_Services_Mbr_Development</group>
            <group>Member_Services_Temp_Help</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Former_Member</fullName>
        <active>true</active>
        <businessProcess>Member</businessProcess>
        <description>Former YPO members</description>
        <label>Former Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member</fullName>
        <active>true</active>
        <businessProcess>Member</businessProcess>
        <label>Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <businessProcess>Prospect</businessProcess>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CA_Cannot_Update_Close_Date</fullName>
        <active>true</active>
        <description>Chapter Admins cannot update the Close Date</description>
        <errorConditionFormula>AND 
( 
ISCHANGED(  CloseDate ),  $Permission.ypo_ChapterAdmin  
)</errorConditionFormula>
        <errorMessage>Chapter Admins cannot update the Close Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Cannot_Update_Opportunity_Name</fullName>
        <active>true</active>
        <description>Chapter Admins cannot update Opportunity Name</description>
        <errorConditionFormula>AND 
( 
ISCHANGED(  Name  ), 
$Profile.Name = &apos;Partner User&apos; 
)</errorConditionFormula>
        <errorMessage>Chapter Admins cannot update Opportunity Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Cannot_Update_Stage</fullName>
        <active>false</active>
        <description>Chapter Admins cannot update Stage</description>
        <errorConditionFormula>AND 
( 
ISCHANGED(  StageName  ), 
$Profile.Name = &apos;Partner User&apos; 
)</errorConditionFormula>
        <errorMessage>Chapter Admins cannot update Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_check</fullName>
        <active>false</active>
        <description>Opportunity can be moved to Closed Won only if Stage was Payment Received and Certification Status is Complete or Validated</description>
        <errorConditionFormula>IF( and( ISCHANGED(StageName), ISPICKVAL( StageName , &apos;Closed Won&apos;)),IF( AND(ISPICKVAL( PRIORVALUE( StageName ),&apos;Payment Received&apos;),OR( ISPICKVAL( Certification_Status__c , &apos;Complete&apos;), ISPICKVAL( Certification_Status__c , &apos;Validated&apos;))),FALSE, TRUE), FALSE)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Stage can be moved to Closed Won only if Stage was prior set to &apos;Payment Received&apos; and Certification Status is either &apos;Complete&apos; or &apos;Validated&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Required_on_Opportunities</fullName>
        <active>true</active>
        <description>Contact should always be required on an Opportunity.</description>
        <errorConditionFormula>AND(
KGRenewal__Contact__c = null, 
NOT(RecordType.DeveloperName = &apos;Prospect&apos;),
OR(
NOT(ISPICKVAL(StageName, &apos;Closed Won&apos;)), NOT(ISPICKVAL(StageName, &apos;Closed Lost&apos;))
),
NOT(ISPICKVAL(Opportunity_Type__c, &apos;&apos;))

)</errorConditionFormula>
        <errorMessage>A contact is required on all Opportunities except Prospects.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fiscal_Date_Start_Must_be_1_7</fullName>
        <active>true</active>
        <description>Fiscal Date Start must be July 1st of a given year. (1/7/YYYY)</description>
        <errorConditionFormula>OR( 
DAY( Fiscal_Date_Start__c ) &lt;&gt; 1, 
MONTH( Fiscal_Date_Start__c ) &lt;&gt; 7)</errorConditionFormula>
        <errorDisplayField>Fiscal_Date_Start__c</errorDisplayField>
        <errorMessage>Fiscal Date Start must be July 1st of a given year. (1/7/YYYY)</errorMessage>
    </validationRules>
</CustomObject>